tests/macros/raw_select/validate.stderr
error: option `validate` does not exist for kind `raw_select`
 --> $DIR/validate.rs:2:47
  |
2 |     let q = requestty::questions![RawSelect { validate: todo!() }];
  |                                               ^^^^^^^^
